# nl-dynamics

./: .gitignore  .travis.yml  README.md  dependencies.rosinstall  pycharm.bashrc  rosinstall-nl_dynamics
GPMDS/: CMakeLists.txt  data.txt  package.xml
GPMDS/include/GPMDS/: GPMDS.h  MultiGPR.h
GPMDS/src/: GPMDS.cpp  MultiGPR.cpp  expData.cpp  exportReshapingParams.cpp
controller_demonstrations/: CMakeLists.txt  package.xml  setup.py
controller_demonstrations/controller_demonstrations/demonstrations/: collect_demonstration.py  exemple_client.py  file_util.py  sandbox.py  send_multiple_demonstrations.py  send_one_demonstration.py  send_robot_continue.py
controller_demonstrations/controller_demonstrations/demonstrations/kuka_bag_visualization/: kuka_bag_plot.py  sandbox.py
controller_demonstrations/controller_demonstrations/demonstrations/test/test_data/: right.bag
controller_demonstrations/controller_demonstrations/interactive_demonstration/: ConfirmationMachine.py  branch_changingspeed.py  branch_gettingcommand.py  branch_teachingcommand.py  interactive_demo.py  say_state.py
controller_demonstrations/controller_demonstrations/interactive_demonstration/test/: test_command_in_dictionnary.py  test_string_to_number.py
controller_demonstrations/controller_demonstrations/kuka_bag_visualization/: kuka_bag_plot.py
controller_demonstrations/controller_demonstrations/robot_dialogue_interface/: kuka_dialogue_interface.py  robot_dialogue_interface.py  turtle_dialogue_interface.py
controller_demonstrations/controller_demonstrations/robot_dialogue_interface/test/: test_kuka_interface.py  test_robot_interface.py  test_turtle_interface.py  test_turtle_twist_extraction.py  test_turtle_twist_generation.py
controller_demonstrations/language_models/: robot_control.corpus  robot_control.dic  robot_control.lm
controller_demonstrations/launch/: interactive_demo.launch  lwr_launch_kuka_passive_ds.launch  pc_interactive_demo.launch  user_interaction_processes.launch
controller_demonstrations/msg/: Demonstration.msg
controller_demonstrations/src/demonstrations/: collect_demonstration.py  correction_publisher.py  exemple_client.py  file_util.py  send_multiple_demonstrations.py  send_one_demonstration.py  visualize_demo_sandbox.py  visualize_demonstrations.py
controller_demonstrations/src/demonstrations/kuka_bag_visualization/: analyse_quantitative_graph_generator.py  kuka_bag_plot.py  spline.py
controller_demonstrations/src/demonstrations/test/: test_correction_publisher.py  test_demonstration_response.py  test_pose_util.py  test_send_demos.py
controller_demonstrations/src/demonstrations/test/test_data/: left.bag
controller_demonstrations/src/interactive_demonstration/: ConfirmationMachine.py  ConfirmationState.py  SayState.py  branch_changingspeed.py  branch_gettingcommand.py  branch_teachingcommand.py  demo_collection.py  interactive_demo.py  robot_receiver.py  say_state.py  todo.md
controller_demonstrations/src/interactive_demonstration/test/: test_command_in_dictionnary.py  test_string_to_number.py
controller_demonstrations/src/robot_dialogue_interface/: kuka_dialogue_interface.py  robot_dialogue_interface.py  turtle_dialogue_interface.py
controller_demonstrations/src/robot_dialogue_interface/test/: test_kuka_interface.py  test_robot_interface.py  test_turtle_interface.py  test_turtle_twist_generation.py
data/2015.10.28-robot_demonstration/: Lshape1.bag  Lshape2.bag  ThreeCorr.bag  dance.bag  down1.bag  down2.bag  nshape1.bag  nshape2.bag  out1.bag  out2.bag  out3.bag  up.bag  up2.bag  up3.bag  up4.bag
docs/2015-semester.project-stephane.ballmer/: biblio.tex  command.tex  conclusion.tex  correction_detection.tex  gpr.tex  introduction.tex  report_ballmer.tex  spell_checker.sh  splines.tex  thanks.tex
docs/rss15-workshop/: Makefile  references.bib  rss-approach.tex  rss-conclusions.tex  rss-intro.tex  rss-macros.tex  rss-results.tex  rss15-nl.controllers.tex
gspeech/: CMakeLists.txt  package.xml
gspeech/src/: gspeech.py
nl_msgs/: CMakeLists.txt  package.xml
nl_msgs/msg/: AnchoredDemonstration.msg  AttractorDemonstration.msg  CartStateStamped.msg  Correction.msg  OffsetDemonstration.msg  SplineClass.msg
nl_msgs/srv/: Com.srv  Demonstration.srv
src/cpp/GPMDS/: .gitignore  CMakeLists.txt
src/cpp/GPMDS/include/: GPMDS.h
src/cpp/GPMDS/include/GPMDS/: GPMDS.h  MultiGPR.h  Timer.h
src/cpp/GPMDS/src/: GPMDS.cpp  GPMDS.h  MultiGPR.cpp  MultiGPR.h  Timer.h  expData.cpp
src/python/: GPMDS.py  KalmanFunctions.py  MultiGPR.py  README.txt  gui.py
turtle_voice_command/config/: command_robot.corpus  command_robot.dic  command_robot.lm
turtle_voice_command/launch/: robot_voice_control.launch
turtle_voice_command/src/: converterclass.py
user_voice_recordings/: CMakeLists.txt  package.xml
user_voice_recordings/data/: 2015-12-01-14-44-20.bag
user_voice_recordings/language_models/: robot_control.corpus  robot_control.dic  (+1 more)
(+77 files in other folders)
